core-plugins/src/test/resources/scraper/plugins/core/typechecker/ok/cycle1.yf
---
name: cycle
graphs:
  start:
    - {type: EchoNode, put: list, value: ["1","2"], goTo: cycle}
  cycle:
    - {type: EchoNode, put: olist, value: "{list}", goTo: cycle}
