core-plugins/src/test/resources/scraper/plugins/core/typechecker/fail/cycle1.yf
---
name: cycle
graphs:
  start:
    - {type: Echo, put: list, value: ["1","2"], goTo: cycle}
  cycle:
    - {type: Echo, put: olist, value: "{lit}", goTo: cycle}
